Criado CRUD completo das roles, e templates. Criado também arquivo css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="jumbotron mt-2">
-    <h1 class="display-4">Bem-vindo ao Painel de Dashboards!!</h1>
+    <h1 class="display-4">Bem-vindo ao Painel de Dashboards!</h1>
     <p class="lead">Aqui você terá acesso aos principais dashboards do Observatório da Indústria.</p>
 </div>
 {% endblock %}
