--- a/app/templates/roles/create_role.html
+++ b/app/templates/roles/create_role.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
+<head>
+    <link
+        rel="stylesheet"
+        type="text/css"
+        href="{{ url_for('templates/roles', filename='roles.css') }}"
+    />
+</head>
+
 {% block content %}
 <div class="container mt-4">
     <h1>{{ title }}</h1>
@@ -13,7 +21,7 @@
             {{ form.description.label(class="form-label") }}
             {{ form.description(class="form-control") }}
         </div>
-        <div class="form-group">
+        <div class="form-group mt-2">
             {{ form.submit(class="btn btn-primary") }}
         </div>
     </form>
