Criação do Create e list all users, modificação no modelo do usuário para ter apenas 1 função, e versão de migração.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('roles.list_roles')}}">Roles</a></li>
-                <li><a class="dropdown-item" href="#">Usuários</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('usuarios.list_users')}}">Usuários</a></li>
               </ul>
             </li>
           </div>
